finetune no .gguf creation

--- a/finetune/src/finetuneSnowflake.ipynb
+++ b/finetune/src/finetuneSnowflake.ipynb
@@ -28,8 +28,8 @@
    "authorId": "8831210463455",
    "authorName": "JWADE",
    "authorEmail": "jwade23@pvamu.edu",
-   "sessionId": "b91882b0-45c7-426e-a32b-70dc96a89e6c",
-   "lastEditTime": 1742328753322
+   "sessionId": "56b57b71-e2ee-4b42-b763-3939c138b886",
+   "lastEditTime": 1742347562413
   },
   "vscode": {
    "interpreter": {
@@ -8048,7 +8048,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": "from unsloth import FastModel\nimport torch\nimport transformers\n\nfourbit_models = [\n    # 4bit dynamic quants for superior accuracy and low memory use\n    \"unsloth/gemma-3-1b-it-unsloth-bnb-4bit\",\n    \"unsloth/gemma-3-4b-it-unsloth-bnb-4bit\",\n    \"unsloth/gemma-3-12b-it-unsloth-bnb-4bit\",\n    \"unsloth/gemma-3-27b-it-unsloth-bnb-4bit\",\n\n    # Other popular models!\n    \"unsloth/Llama-3.1-8B\",\n    \"unsloth/Llama-3.2-3B\",\n    \"unsloth/Llama-3.3-70B\",\n    \"unsloth/mistral-7b-instruct-v0.3\",\n    \"unsloth/Phi-4\",\n] # More models at https://huggingface.co/unsloth\n\nmodel, tokenizer = FastModel.from_pretrained(\n    model_name = \"unsloth/gemma-3-4b-it\",\n    max_seq_length = 2048, # Choose any for long context!\n    attn_implementation=\"eager\",\n    load_in_4bit = True,  # 4 bit quantization to reduce memory\n    load_in_8bit = False, # [NEW!] A bit more accurate, uses 2x memory\n    full_finetuning = False, # [NEW!] We have full finetuning now!\n)"
+   "source": "from unsloth import FastModel\nimport torch\nimport transformers\n\nfourbit_models = [\n    # 4bit dynamic quants for superior accuracy and low memory use\n    \"unsloth/gemma-3-1b-it-unsloth-bnb-4bit\",\n    \"unsloth/gemma-3-4b-it-unsloth-bnb-4bit\",\n    \"unsloth/gemma-3-12b-it-unsloth-bnb-4bit\",\n    \"unsloth/gemma-3-27b-it-unsloth-bnb-4bit\",\n\n    # Other popular models!\n    \"unsloth/Llama-3.1-8B\",\n    \"unsloth/Llama-3.2-3B\",\n    \"unsloth/Llama-3.3-70B\",\n    \"unsloth/mistral-7b-instruct-v0.3\",\n    \"unsloth/Phi-4\",\n] # More models at https://huggingface.co/unsloth\n\nmodel, tokenizer = FastModel.from_pretrained(\n    model_name = \"unsloth/gemma-3-4b-it\",\n    max_seq_length = 2048, # Choose any for long context!\n    attn_implementation=\"eager\",\n    load_in_4bit = False,  # 4 bit quantization to reduce memory\n    load_in_8bit = True, # [NEW!] A bit more accurate, uses 2x memory\n    full_finetuning = False, # [NEW!] We have full finetuning now!\n)"
   },
   {
    "cell_type": "markdown",
@@ -8430,6 +8430,17 @@
   },
   {
    "cell_type": "code",
+   "id": "e3e8477d-7830-4892-93b7-f09bff47fc2d",
+   "metadata": {
+    "language": "python",
+    "name": "cell14"
+   },
+   "outputs": [],
+   "source": "print(trainer.train_dataset[0])",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "ce110000-1111-2222-3333-ffffff000014",
    "metadata": {
@@ -8472,14 +8483,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "from unsloth.chat_templates import train_on_responses_only\n",
-    "trainer = train_on_responses_only(\n",
-    "    trainer,\n",
-    "    instruction_part = \"<|start_header_id|>user<|end_header_id|>\\n\\n\",\n",
-    "    response_part = \"<|start_header_id|>assistant<|end_header_id|>\\n\\n\",\n",
-    ")"
-   ]
+   "source": "from unsloth.chat_templates import train_on_responses_only\ntrainer = train_on_responses_only(\n    trainer,\n    instruction_part = \"<start_of_turn>user\\n\",\n    response_part = \"<start_of_turn>model\\n\",\n)"
   },
   {
    "cell_type": "markdown",
@@ -8554,10 +8558,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "space = tokenizer(\" \", add_special_tokens = False).input_ids[0]\n",
-    "tokenizer.decode([space if x == -100 else x for x in trainer.train_dataset[5][\"labels\"]])"
-   ]
+   "source": "space = tokenizer(\" \", add_special_tokens = False).input_ids[0]\ntokenizer.decode([tokenizer.pad_token_id if x == -100 else x for x in trainer.train_dataset[100][\"labels\"]]).replace(tokenizer.pad_token, \" \")"
   },
   {
    "cell_type": "code",
@@ -9116,12 +9117,7 @@
     "name": "llama"
    },
    "outputs": [],
-   "source": [
-    "!git clone https://github.com/ggml-org/llama.cpp.git\n",
-    "%cd llama.cpp\n",
-    "!cmake -B build\n",
-    "!cmake --build build --config Release"
-   ]
+   "source": "#!git clone https://github.com/ggml-org/llama.cpp.git\n#%cd llama.cpp\n#!cmake -B build\n#!cmake --build build --config Release"
   },
   {
    "cell_type": "markdown",
@@ -9717,17 +9713,62 @@
      ]
     }
    ],
-   "source": "model.save_pretrained(\"gemma-3\")  # Local saving\ntokenizer.save_pretrained(\"gemma-3\")"
+   "source": "model.save_pretrained(\"gemma-3\")\ntokenizer.save_pretrained(\"gemma-3\")\nmodel.config.save_pretrained(\"gemma-3\")  # Ensure config is saved"
   },
   {
    "cell_type": "code",
-   "id": "8da72beb-b628-4797-943c-fcf14f341979",
+   "id": "a9eaaad2-6974-4bb4-8d92-3b1748462f31",
+   "metadata": {
+    "language": "python",
+    "name": "cell20"
+   },
+   "outputs": [],
+   "source": "from transformers import AutoConfig\nconfig = AutoConfig.from_pretrained(\"gemma-3\")\nconfig.save_pretrained(\"gemma-3\")",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "id": "63c55d59-bd5f-49a5-9b3c-54e9f1003b79",
+   "metadata": {
+    "language": "python",
+    "name": "cell15",
+    "codeCollapsed": false
+   },
+   "outputs": [],
+   "source": "!ls",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "id": "31ba1264-05f0-41a7-bbee-818a98bd1f9b",
+   "metadata": {
+    "language": "python",
+    "name": "cell17"
+   },
+   "outputs": [],
+   "source": "!ls gemma-3",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "id": "c136d8f5-95c0-4041-9c9d-db64cad208e7",
+   "metadata": {
+    "language": "python",
+    "name": "cell25"
+   },
+   "outputs": [],
+   "source": "!pwd",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "id": "e25457ce-194a-4935-9150-3f78ae65321a",
    "metadata": {
     "language": "python",
     "name": "cell7"
    },
    "outputs": [],
-   "source": "model.save_pretrained_gguf(\n        \"gemma-3-finetune\",\n        quantization_type = \"Q8_0\", # For now only Q8_0, BF16, F16 supported\n    )",
+   "source": "!ls /home/app/gemma-3",
    "execution_count": null
   },
   {
@@ -9740,23 +9781,7 @@
     "name": "Upload_to_stage"
    },
    "outputs": [],
-   "source": [
-    "from snowflake.snowpark.context import get_active_session\n",
-    "session = get_active_session()\n",
-    "\n",
-    "put_result = session.file.put(\"/home/app/llama.cpp/careconnect-llama3.2-3b/unsloth.Q8_0.gguf\",\"@SOFTWARESURGEONS_DB.GIT.CARECONNECT_MODEL_STAGE\", auto_compress= False)\n",
-    "put_result = session.file.put(\"/home/app/llama.cpp/careconnect-llama3.2-3b/Modelfile\",\"@SOFTWARESURGEONS_DB.GIT.CARECONNECT_MODEL_STAGE\", auto_compress= False)\n",
-    "put_result = session.file.put(\"/home/app/llama.cpp/careconnect-llama3.2-3b/tokenizer_config.json\",\"@SOFTWARESURGEONS_DB.GIT.CARECONNECT_MODEL_STAGE\", auto_compress= False)\n",
-    "put_result = session.file.put(\"/home/app/llama.cpp/careconnect-llama3.2-3b/tokenizer.json\",\"@SOFTWARESURGEONS_DB.GIT.CARECONNECT_MODEL_STAGE\", auto_compress= False)\n",
-    "put_result = session.file.put(\"/home/app/llama.cpp/careconnect-llama3.2-3b/special_tokens_map.json\",\"@SOFTWARESURGEONS_DB.GIT.CARECONNECT_MODEL_STAGE\", auto_compress= False)\n",
-    "put_result = session.file.put(\"/home/app/llama.cpp/careconnect-llama3.2-3b/config.json\",\"@SOFTWARESURGEONS_DB.GIT.CARECONNECT_MODEL_STAGE\", auto_compress= False)\n",
-    "put_result = session.file.put(\"/home/app/llama.cpp/careconnect-llama3.2-3b/adapter_model.safetensors\",\"@SOFTWARESURGEONS_DB.GIT.CARECONNECT_MODEL_STAGE\", auto_compress= False)\n",
-    "put_result = session.file.put(\"/home/app/llama.cpp/careconnect-llama3.2-3b/adapter_config.json\",\"@SOFTWARESURGEONS_DB.GIT.CARECONNECT_MODEL_STAGE\", auto_compress= False)\n",
-    "put_result = session.file.put(\"/home/app/llama.cpp/careconnect-llama3.2-3b/README.md\",\"@SOFTWARESURGEONS_DB.GIT.CARECONNECT_MODEL_STAGE\", auto_compress= False)\n",
-    "\n",
-    "\n",
-    "put_result[0].status"
-   ]
+   "source": "from snowflake.snowpark.context import get_active_session\nsession = get_active_session()\n\n\n\nput_result = session.file.put(\"/home/app/gemma-3/adapter_config.json\",\"@SOFTWARESURGEONS_DB.GIT.CARECONNECT_GEMMA3_STAGE\", auto_compress= False)\nput_result = session.file.put(\"/home/app/gemma-3/tokenizer.json\",\"@SOFTWARESURGEONS_DB.GIT.CARECONNECT_GEMMA3_STAGE\", auto_compress= False)\nput_result = session.file.put(\"/home/app/gemma-3/adapter_model.safetensors\",\"@SOFTWARESURGEONS_DB.GIT.CARECONNECT_GEMMA3_STAGE\", auto_compress= False)\nput_result = session.file.put(\"/home/app/gemma-3/added_tokens.json\",\"@SOFTWARESURGEONS_DB.GIT.CARECONNECT_GEMMA3_STAGE\", auto_compress= False)\nput_result = session.file.put(\"/home/app/gemma-3/chat_template.json\",\"@SOFTWARESURGEONS_DB.GIT.CARECONNECT_GEMMA3_STAGE\", auto_compress= False)\nput_result = session.file.put(\"/home/app/gemma-3/config.json\",\"@SOFTWARESURGEONS_DB.GIT.CARECONNECT_GEMMA3_STAGE\", auto_compress= False)\nput_result = session.file.put(\"/home/app/gemma-3/README.md\",\"@SOFTWARESURGEONS_DB.GIT.CARECONNECT_GEMMA3_STAGE\", auto_compress= False)\nput_result = session.file.put(\"/home/app/gemma-3/preprocessor_config.json\",\"@SOFTWARESURGEONS_DB.GIT.CARECONNECT_GEMMA3_STAGE\", auto_compress= False)\nput_result = session.file.put(\"/home/app/gemma-3/processor_config.json\",\"@SOFTWARESURGEONS_DB.GIT.CARECONNECT_GEMMA3_STAGE\", auto_compress= False)\nput_result = session.file.put(\"/home/app/gemma-3/tokenizer.json\",\"@SOFTWARESURGEONS_DB.GIT.CARECONNECT_GEMMA3_STAGE\", auto_compress= False)\nput_result = session.file.put(\"/home/app/gemma-3/tokenizer.model\",\"@SOFTWARESURGEONS_DB.GIT.CARECONNECT_GEMMA3_STAGE\", auto_compress= False)\nput_result = session.file.put(\"/home/app/gemma-3/tokenizer_config.json\",\"@SOFTWARESURGEONS_DB.GIT.CARECONNECT_GEMMA3_STAGE\", auto_compress= False)\n\nput_result[0].status"
   },
   {
    "cell_type": "code",
@@ -9768,9 +9793,7 @@
     "name": "verify_upload"
    },
    "outputs": [],
-   "source": [
-    "ls @SOFTWARESURGEONS_DB.GIT.CARECONNECT_MODEL_STAGE\n"
-   ]
+   "source": "ls @SOFTWARESURGEONS_DB.GIT.CARECONNECT_GEMMA3_STAGE\n"
   }
  ]
 }
